<resources>
    <string name="app_name">CHAINUP</string>
    <string name="loading">Loading…</string>
    <string name="logging">Logging in…</string>
    <string name="show">Show</string>
    <string name="not_show">Not show</string>
    <string name="market">Market</string>
    <string name="symbol">Symbol</string>
    <string name="update">Update</string>
    <string name="ignore">Ignore</string>
    <string name="exit_remind">Tap again to exit</string>
    <string name="more">More</string>
    <string name="title_information">Information</string>
    <string name="title_change_phone">Change hone</string>
    <string name="title_change_email">Change Email</string>
    <string name="title_bind_phone">Bind Phone</string>
    <string name="title_verification_phone">Verify Phone</string>
    <string name="title_bind_email">Bind Phone</string>
    <string name="title_verification_email">Verify Email</string>
    <string name="title_change_nickname">Change Nickname</string>
    <string name="title_notification">Notification</string>
    <string name="title_personal_center">Personal Center</string>
    <string name="title_recharge">Recharge</string>
    <string name="title_recharge_address">Recharge Address</string>
    <string name="title_recharge_record">Recharge Record</string>
    <string name="title_reset_login_pass">Reset Login Password</string>
    <string name="title_set_asset_pass">Set AssetPassword</string>
    <string name="title_reset_asset_pass">Reset Asset Password</string>
    <string name="title_rebind_phone">Rebind Phone</string>
    <string name="title_rebind_email">Rebind Email</string>
    <string name="title_asset_pass_setting">Change Frequency</string>
    <string name="title_user_agreement">User Agreement</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_choose_area">Select Region</string>
    <string name="title_choose_symbol">Select Currency Pair</string>
    <string name="title_transaction_details">Transaction Details</string>
    <string name="title_asset_details">Asset Details</string>
    <string name="title_industry_information">Industry Information</string>
    <string name="title_gesture_password">Gesture Password</string>
    <string name="title_asset_setting">Asset Setting</string>
    <string name="safe_setting">Security Setting</string>
    <string name="binding_phone">Bind Phone</string>
    <string name="binding_email">Bind Email</string>
    <string name="login_pass">Login Password</string>
    <string name="funds_pass">Asset Password</string>
    <string name="safe_tactics">Security Tactics</string>
    <string name="login_validity">Login Validity</string>
    <string name="version_update">Version</string>
    <string name="user_agreement">User Agreement</string>
    <string name="hotline"> Service Hotline</string>
    <string name="french_recharge">Legal Tender Recharge</string>
    <string name="USDT">USDT</string>
    <string name="EUR">EUR</string>
    <string name="token_recharge">Token Recharge</string>
    <string name="BTC">BTC</string>
    <string name="LTC">LTC</string>
    <string name="BCC">BCC</string>
    <string name="ETH">ETH</string>
    <string name="b2c_text_rechargeRecord">Recharge Record</string>
    <string name="recharge_remind">Check the recharge currency carefully, assets other than BTC are not admitted to BTC address and will not be returned if admitted. </string>
    <string name="important_hint">Important Note:</string>
    <string name="asset_details">Asset Details</string>
    <string name="recharge">Recharge</string>
    <string name="withdraw">Withdraw</string>
    <string name="other">Other</string>
    <string name="cashFlow">Cash Flow</string>
    <string name="address_management">Address Management</string>
    <string name="title_about">About Us</string>
    <string name="contactCall">Contact Number</string>
    <string name="title_help_center">Help Center</string>
    <string name="hint_buy_amount"> Amount</string>
    <string name="hint_sell_amount"> Amount</string>
    <string name="deep_merger">Depth</string>
    <string name="available_balance">Available Balance</string>
    <string name="remind_transaction_price">Actual price shall prevail</string>
    <string name="limit_transaction">Limit</string>
    <string name="title_history_order">History of orders</string>
    <string name="title_deal_detail">Transaction Details</string>
    <string name="gmv">GMV</string>
    <string name="trust_quantity">Trust Quantity</string>
    <string name="setting">Settings</string>
    <string name="trust">Trust</string>
    <string name="deal">Deal</string>
    <string name="orientation">Operation</string>
    <string name="recent_deal">Recent Deals</string>
    <string name="volume">Volume</string>
    <string name="determine">OK</string>
    <string name="feedback">Feedback</string>
    <string name="account_info">Account Information</string>
    <string name="personal_info">Personal Information</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="certificate_type">Certificate Type</string>
    <string name="identity_certificate">Identity Authentication</string>
    <string name="certificate_num">Certificate Number</string>
    <string name="certification_level">Authentication Level</string>
    <string name="funding_password">Fund Password</string>
    <string name="verification">Verification</string>
    <string name="sign_out">Logout</string>
    <string name="confirm">OK</string>
    <string name="hint_personal_info_name">Input the real name on identity certificate</string>
    <string name="hint_personal_info_certificate_type">Passport</string>
    <string name="hint_personal_info_certificate_num">Input identity certificate number</string>
    <string name="passport_cover">Passport Cover</string>
    <string name="image_example">Image Example</string>
    <string name="passport_personal_info_page">Personal Information Page of Passport</string>
    <string name="phone_passport_person">Photo of you holding the personal information and signature page of Passport</string>
    <string name="personal_info_prompt">Ensure photo complete and clearly visible for a successful authentication. only JPG format is supported.  /n Photo requirements: clear head portrait, clear certificate ID, clear signature, including current date</string>
    <string name="submit_review">Submit</string>
    <string name="assets_pass_warning">For account security,  withdrawal of  currency or token is forbidden within 24 hours after password setting or resetting! </string>
    <string name="original_pass">Original Password</string>
    <string name="original_email">Original Email</string>
    <string name="new_email">New Email</string>
    <string name="new_mobile">New Phone</string>
    <string name="original_mobile">Original Phone</string>
    <string name="save">Save</string>
    <string name="hint_nickname">Input nickname</string>
    <string name="dialog_remind">Complete relevant operations on our official website</string>
    <string name="cancel">Cancel</string>
    <string name="take_a_photo">Take Photo</string>
    <string name="select_from_album">Select from Album</string>
    <string name="submit">Submit</string>
    <string name="submiting">Submitting...</string>
    <string name="determine_bind">Confirm  Bind</string>
    <string name="asset_pass_not_verification">Do not verify asset password</string>
    <string name="asset_pass_verification_2hour">Verify asset password every two hours</string>
    <string name="asset_pass_verification_every_time">Verify asset password every time</string>
    <string name="reset">Reset</string>
    <string name="my_invitation_code">My Invitation Code</string>
    <string name="login_setting">Login Setting</string>
    <string name="gesture_pass">Gesture Password</string>
    <string name="pass_input_times">Input Frequency</string>
    <string name="total_assets_valuation">Total Assets</string>
    <string name="verified">Certified</string>
    <string name="not_certified">Unauthorized</string>
    <string name="confirm_changes">Confirm</string>
    <string name="assets_pass">Asset Password</string>
    <string name="original_assets_pass">Original Asset Password</string>
    <string name="reset_assets_pass">Reset asset password</string>
    <string name="set_assets_pass">Set asset fund password</string>
    <string name="default_area">China (+86)</string>
    <string name="toast_no_idcard">Input ID number</string>
    <string name="toast_no_google_code">Input Google verification code</string>
    <string name="idcard">ID card</string>
    <string name="title_google_verified">Google Verification</string>
    <string name="otc_collect_money">Payment</string>
    <string name="common_action_next">Next</string>
    <string name="common_action_thinkAgain">Later</string>
    <string name="common_text_btnConfirm">Confirm</string>
    <string name="common_text_coinsymbol">Currency</string>
    <string name="common_text_identify">Identity Authentication</string>
    <string name="common_text_logout">Drop out</string>
    <string name="customSetting_action_kline">Up/Down color</string>
    <string name="customSetting_action_language">Language</string>
    <string name="customSetting_action_theme">Skin setting</string>
    <string name="oct_tip_buyerCancel">There will be no refund after the order is cancelled. If you have paid, please do not cancel the order. If the cancellation of order is more than 3 times, the buying operation can not be carried out within 24h.</string>
    <string name="otc_action_cancel">Cancel the order</string>
    <string name="personal_text_setting">Settings</string>
    <string name="register_action_mail">Email address</string>
    <string name="register_action_phone">Register through mobile phone number</string>
    <string name="register_action_toLogin">Go to log in</string>
    <string name="register_text_phone">Mobile Phone</string>
    <string name="register_tip_exsitUser">Have account?</string>
    <string name="otc_tip_buyerCancelConfirm">I am sure I haven\'t paid them yet</string>
    <string name="redpacket_send_total">Total Amount</string>
    <string name="otc_custom_price">Custom</string>
    <string name="otc_payMoney_timeMinute">Minute</string>
    <string name="otc_have_closed">Ad is closed</string>
    <string name="otc_advertise_detail">Ad Details</string>
    <string name="otc_create_time">Creation time</string>
    <string name="otc_text_advertiseID">Advertising ID</string>
    <string name="otc_advertise_type">Type</string>
    <string name="otc_coin_type">Currency type</string>
    <string name="otc_leaveAndTotal">Remaining quantity / total quantity</string>
    <string name="otc_market_ReferencPrice">Market reference price</string>
    <string name="otc_setPrice_method">Pricing Method</string>
    <string name="otc_outPrice_direction">Premium direction</string>
    <string name="otc_outPrice_percent">Premium price</string>
    <string name="otc_userSet_singlePrice">Custom unit price</string>
    <string name="otc_min_amount">Minimum amount</string>
    <string name="otc_max_amount">Maximum amount</string>
    <string name="otc_payMoney_time">Time Limit for the Payment</string>
    <string name="otc_other_times">Frequency</string>
    <string name="otc_other_minTransactionTimes">The minimum number of transactions of the other party</string>
    <string name="otc_text_validTime">Failure Time</string>
    <string name="otc_text_autoBack">Auto reply (not required)</string>
    <string name="otc_text_advertiseLeaveWords">Ad message (not required）</string>
    <string name="customSetting_action_title">Problem feedback</string>
    <string name="customSetting_action_upload">Upload log</string>
    <string name="customSetting_action_push">Push Settings</string>
    <string name="customSetting_action_changeHost">change Host</string>
</resources>