<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.yjkj.chainup.new_version.view.PersonalCenterView
        android:id="@+id/v_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:personalTitle="@string/otc_advertise_detail"
        app:showRightTv="false" />

    <com.yjkj.chainup.new_version.view.CommonlyUsedButton
        android:id="@+id/cub_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="10dp"
        app:bottonTextContent="@string/otc_have_closed"
        app:normalEnable="false" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nest_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cub_confirm"
        android:layout_below="@+id/v_title"
        android:background="@color/bg_card_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_create_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:bottomEditTextContent="sksksks"
                app:editTextRightContent=""
                app:editTextRightIVVisible="false"
                app:topEditTextContent="@string/otc_create_time" />

            <com.yjkj.chainup.new_version.view.NewOTCTextView
                android:id="@+id/ntt_advertising_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomImageViewVisible="true"
                app:bottomTextContent=""
                app:topTextContent="@string/otc_text_advertiseID" />

            <com.yjkj.chainup.new_version.view.NewOTCTextView
                android:id="@+id/ntt_coin_symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomTextContent=""
                app:topTextContent="@string/common_text_coinsymbol" />

            <com.yjkj.chainup.new_version.view.NewOTCTextView
                android:id="@+id/ntt_advertising_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomTextContent=""
                app:topTextContent="@string/otc_advertise_type" />

            <com.yjkj.chainup.new_version.view.NewOTCTextView
                android:id="@+id/ntt_payCoin_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomTextContent=""
                app:topTextContent="@string/otc_coin_type" />

            <com.yjkj.chainup.new_version.view.NewOTCTextView
                android:id="@+id/ntt_num_amount_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomTextContent=""
                app:topTextContent="@string/otc_leaveAndTotal" />

            <com.yjkj.chainup.new_version.view.NewOTCTextView
                android:id="@+id/ntt_market_reference_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomTextContent=""
                app:topImageViewVisible="true"
                app:topTextContent="@string/otc_market_ReferencPrice" />

            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_pricing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:tooltipText="@string/otc_setPrice_method"
                app:bottomEditTextContent="@string/otc_custom_price"
                app:editTextRightContent=""
                app:editTextRightIVVisible="false"
                app:topEditTextContent="@string/otc_setPrice_method" />

            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_premium_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:visibility="gone"
                app:bottomEditTextContent=""
                app:editTextRightContent=""
                app:editTextRightIVVisible="false"
                app:topEditTextContent="@string/otc_outPrice_direction" />

            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_premium_direction_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:visibility="gone"
                app:bottomEditTextContent=""
                app:editTextRightContent="%"
                app:editTextRightIVVisible="false"
                app:topEditTextContent="@string/otc_outPrice_percent" />


            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_pricing_is_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomEditTextContent="@string/otc_custom_price"
                app:editTextRightContent="CNY"
                app:editTextRightIVVisible="false"
                app:topEditTextContent="@string/otc_userSet_singlePrice" />

            <com.yjkj.chainup.new_version.view.NewOTCTextView
                android:id="@+id/ntt_all_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomTextContent=""
                app:topTextContent="@string/redpacket_send_total" />

            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_minimum_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomEditTextContent=""
                app:editTextRightContent="CNY"
                app:editTextRightIVVisible="false"
                app:topEditTextContent="@string/otc_min_amount" />

            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_max_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomEditTextContent=""
                app:editTextRightContent="CNY"
                app:editTextRightIVVisible="false"
                app:topEditTextContent="@string/otc_max_amount" />

            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_limit_for_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomEditTextContent=""
                app:editTextRightContent="@string/otc_payMoney_timeMinute"
                app:editTextRightIVVisible="false"
                app:topEditTextContent="@string/otc_payMoney_time" />

            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_minimum_number_of_transactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomEditTextContent=""
                app:editTextRightContent="@string/otc_other_times"
                app:editTextRightIVVisible="false"
                app:topEditTextContent="@string/otc_other_minTransactionTimes" />

            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_failure_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomEditTextContent=""
                app:editTextRightContent=""
                app:editTextRightIVVisible="true"
                app:topEditTextContent="@string/otc_text_validTime" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/otc_collect_money"
                android:textColor="@color/normal_text_color"
                android:textSize="12sp" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rg_complaint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_18"
                android:layout_marginRight="@dimen/dp_15" />



            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_auto_reply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                app:bottomEditTextContent=""
                app:editTextRightContent=""
                app:editTextRightIVVisible="false"
                app:topEditTextContent="@string/otc_text_autoBack" />

            <com.yjkj.chainup.new_version.view.NewOTCEditTextView
                android:id="@+id/net_advertising_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginBottom="@dimen/dp_40"
                app:bottomEditTextContent=""
                app:editTextRightContent=""
                app:editTextRightIVVisible="false"
                app:topEditTextContent="@string/otc_text_advertiseLeaveWords" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>