<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_card_color"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/NewVersionCancel" />


        <TextView
            android:id="@+id/tv_title"
            style="@style/NewVersionTitle"
            android:layout_below="@+id/tv_cancel"
            android:text="@string/register_action_phone" />

        <com.yjkj.chainup.new_version.view.PwdSettingView
            android:id="@+id/pws_view"
            style="@style/NewVersionPwdStyle"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="@dimen/dp_50"
            app:hint_text=""
            app:icon_res2="@drawable/dropdown_light_color_small"
            app:isEditable="false"
            app:isPwdShow="false"
            app:textContent="@string/default_area" />

        <com.yjkj.chainup.new_version.view.CustomizeEditText
            android:id="@+id/cet_view"
            style="@style/NewVersionEditTextStyle"
            android:layout_below="@+id/pws_view"
            android:layout_marginTop="@dimen/dp_40"
            android:hint="@string/register_text_phone"
            android:textColor="@color/text_color"
            android:textCursorDrawable="@drawable/et_cursor_color"
            android:textSize="@dimen/sp_16" />

        <View
            android:id="@+id/cet_view_line"
            style="@style/NewVersionLineStyle"
            android:layout_below="@+id/cet_view" />

        <com.yjkj.chainup.new_version.view.CommonlyUsedButton
            android:id="@+id/cub_view"
            style="@style/NewVersionCommonlyUsedButtonStyle"
            android:layout_below="@+id/cet_view_line"
            app:bgColor="@color/main_blue"
            app:bottonTextContent="@string/common_action_next" />

        <TextView
            android:id="@+id/tv_mail_or_phone_register"
            style="@style/NewVersionContentStyle"
            android:layout_below="@+id/cub_view"
            android:text="@string/register_action_mail" />

        <TextView
            android:id="@+id/tv_existing_account"
            style="@style/NewVersionInfo"
            android:text="@string/register_tip_exsitUser" />

        <TextView
            android:id="@+id/tv_go_login"
            style="@style/NewVersionRegisterOrLogin"
            android:layout_toRightOf="@+id/tv_existing_account"
            android:text="@string/register_action_toLogin" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>