<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_card_color"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--设置-->
        <com.yjkj.chainup.new_version.view.PersonalCenterView
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            app:personalTitle="@string/personal_text_setting"
            app:showRightIc="false"
            app:showTitle="true" />

        <!--选择语言-->
        <com.yjkj.chainup.new_version.view.AccountItemView
            android:id="@+id/aiv_change_language"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/title_layout"
            android:background="@color/bg_card_color"
            app:isShowLeftIcon="false"
            app:itemTitle="@string/customSetting_action_language"
            app:showLine="true" />
        <!--涨跌色-->
        <com.yjkj.chainup.new_version.view.AccountItemView
            android:id="@+id/aiv_rise_and_fall_color"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/aiv_change_language"
            android:background="@color/bg_card_color"
            app:isShowLeftIcon="false"
            app:itemTitle="@string/customSetting_action_kline"
            app:showLine="true" />
        <!--皮肤设置-->
        <com.yjkj.chainup.new_version.view.AccountItemView
            android:id="@+id/aiv_skin_is_set"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/aiv_rise_and_fall_color"
            android:background="@color/bg_card_color"
            app:isShowLeftIcon="false"
            app:itemTitle="@string/customSetting_action_theme"
            app:showLine="true" />
        <!--日志-->
        <com.yjkj.chainup.new_version.view.AccountItemView
            android:id="@+id/aiv_log_upload"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/aiv_skin_is_set"
            android:background="@color/bg_card_color"
            app:StatusText="@string/customSetting_action_upload"
            app:isShowLeftIcon="false"
            app:itemTitle="@string/customSetting_action_title"
            app:showLine="true" />

        <com.yjkj.chainup.new_version.view.AccountItemView
            android:id="@+id/aiv_push"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/aiv_log_upload"
            android:background="@color/bg_card_color"
            app:isShowLeftIcon="false"
            app:itemTitle="@string/customSetting_action_push"
            app:showLine="true" />

        <com.yjkj.chainup.new_version.view.AccountItemView
            android:id="@+id/aiv_change_newwork"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/aiv_push"
            android:background="@color/bg_card_color"
            app:isShowLeftIcon="false"
            app:itemTitle="@string/customSetting_action_changeHost"
            app:showLine="true" />

        <com.yjkj.chainup.new_version.view.CommonlyUsedButton
            android:id="@+id/login_out"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="30dp"
            app:bottonTextContent="@string/common_text_logout" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>