<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_otc_trading_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_otc_action_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_18"
        android:text="@string/otc_action_cancel"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_oct_tip_buyerCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/oct_tip_buyerCancel"
        android:textColor="@color/certification_color"
        android:textSize="@dimen/sp_14" />

    <CheckBox
        android:id="@+id/cb_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="15dp"
        android:button="@drawable/otc_checkbox"
        android:checked="false"
        android:padding="@dimen/dp_5"
        android:text="@string/otc_tip_buyerCancelConfirm"
        android:textColor="@color/normal_text_color"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_18"
        android:gravity="right"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_order_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_45"
            android:padding="@dimen/dp_5"
            android:text="@string/common_action_thinkAgain"
            android:textStyle="bold"
            android:textColor="@color/main_blue"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_20"
            android:padding="@dimen/dp_5"
            android:text="@string/common_text_btnConfirm"
            android:textStyle="bold"
            android:textColor="@color/normal_text_color"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
</LinearLayout>